Anno-tool: The universal annotation field can now be either in a fixed location or on the image; you can toggle with Shift+right. Also, all z-indices are set dynamically now, so the values can all be in Javascript constants. Also, moved a few JS functions around to organize better.

--- a/annotations/static/css/annotation_tool.css
+++ b/annotations/static/css/annotation_tool.css
@@ -275,11 +275,6 @@ div.help_section span.help_header {
     margin: 10px 0 10px 20px;   /* t r b l */
 }
 
-/* jQuery UI dialogs specifically */
-.ui-dialog {
-    z-index: 3;
-}
-
 /* jQuery-UI sliders. */
 .ui-slider {
     width: 250px;
